@@ -310,17 +310,6 @@ TopCanvas::GetNativeSize() const
 }
 
 void
-TopCanvas::SetDisplayOrientation(DisplayOrientation orientation)
-{
-  const auto native_size = GetNativeSize();
-  if (native_size.cx <= 0 || native_size.cy <= 0)
-    return;
-
-  OpenGL::display_orientation = orientation;
-  SetupViewport(PixelSize(OpenGL::window_size.x, OpenGL::window_size.y));
-}
-
-void
 TopCanvas::Flip()
 {
   if (!eglSwapBuffers(display, surface)) {
